2010-02-18  glitch.vk.crocodile.org  <vadim@vk.crocodile.org>

	* Firewall.cpp (Firewall::duplicate): fixed #1254 ""locked" status
	of the object is lost when data file is loaded". "Read-only" or
	"locked" status of the firewall object was lost when data file was
	loaded into the program. The bug affected only Firewall object.

2010-02-17  vadim  <vadim@vk.crocodile.org>

	* ObjectMirror.cpp (ObjectMirror::getMirroredService): class
	ObjectMirror (refs fwbuilder:ticket:1241 "add mirror rule"
	checkbox for IOSACL)

2010-02-16  vadim  <vadim@vk.crocodile.org>

	* Compiler.cpp (Compiler::correctForCluster): this method takes an
	Address object and replaces it with interface of a member firewall
	if it turns out to be cluster interface. refs fwbuilder:ticket:1235

2010-02-15  vadim  <vadim@vk.crocodile.org>

	* XMLTools.h (libfwbuilder): definition of XMLFREEBUFF moved to
	libfwbuilder-config.h

2010-02-15  glitch.vk.crocodile.org  <vadim@vk.crocodile.org>

	* FWObjectDatabase.cpp (FWObjectDatabase::load): working on memory
	leaks with the help of valgrind. Refs fwbuilder:ticket:1229

2010-02-14  glitch.vk.crocodile.org  <vadim@vk.crocodile.org>

	* Management.cpp (SNMPManagement::fromXML): refs fwbuilder:ticket:1229
	memory leak problems

2010-02-02  vadim  <vadim@vk.crocodile.org>

	* fwbuilder/ObjectMatcher.h (libfwbuilder): reimplemented ObjectMatcher
	class using generic base class Dispatch

	* fwbuilder/Dispatch.h (__DECLARE_DISPATCH_METHODS): generic class
	that implements double dispatch pattern. Helps avoid long chains
	of if-then-else statements that compare object type names.
	Refs fwbuilder:ticket:1186

	* Interface.cpp (Interface::isLoopback): method isLoopback() will
	return true for cluster interface that has no ip address of its
	own but is mapped to loopback interfaces of cluster members.

2010-01-31  vadim  <vadim@vk.crocodile.org>

	* ClusterGroup.cpp (ClusterGroup::getInterfaceForMemberFirewall):